<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="description">An application for roll management for the L5R game.</string>
    <string name="color_error_red">#F11</string>
    <string name="digits">0123456789</string>
    <string name="digits_withnegative">0123456789-</string>
    <string name="default_range">2</string>
    <string name="raise_range">Result Size(0-3)</string>
    <string name="mods">Mods</string>
    <string name="spell_rank">Spell Rank</string>
    <string name="default_raises">5</string>
    <string name="success_rate">Success Chance(1-100)</string>
    <string name="raises">Raises</string>
    <string name="casting_ring">Casting Ring</string>
    <string name="delete_template">Delete Template</string>
    <string name="illegal_template_name">illegal template name</string>
    <string name="new_template">New Template</string>
    <string name="trait_select">Attack trait</string>
    <string name="unable_to_parse">Unable to parse values.</string>
    <string name="save_template">Save Template</string>
    <string name="kept">Kept</string>
    <string name="rolled">Rolled</string>
    <string name="modifier">Modifier</string>
    <string name="is_gp">GP?</string>
    <string name="skill_rank">Skill Rank</string>
    <string name="agility_mod">Agility Mod</string>
    <string name="reflexes_mod">Reflexes Mod</string>
    <string name="template_name">Template Name</string>
    <string name="name_in_use">Name in use</string>
    <string name="template_manager">Template Manager</string>
    <string name="manage_templates">Manage Templates</string>
    <string name="character_name">Character:</string>
    <string name="tn">TNTBH</string>
    <string name="default_tn">25</string>
    <string name="misc_mods">Misc modifiers</string>
    <string name="zero">0</string>
    <string name="calculate">Calculate</string>
    <string name="use_luck">Luck?</string>
    <string name="confidence">Hit Probability(1-100)</string>
    <string name="default_confidence">95</string>
    <string name="roll">Roll:</string>
    <string name="character_overview">Character Overview</string>
    <string name="roll_calculations">Roll Calculations</string>
    <string name="roll_calc">Roll Calculator</string>
    <string name="manage_char">Manage Character</string>
    <string name="delete_char">Delete Character</string>
    <string name="return_main">Return to Start</string>
    <string name="debugdump">Character Data</string>
    <string name="load">Load a Profile</string>
    <string name="gp">Great Potential</string>
    <string name="luck">Luck</string>
    <string name="agility">Agility</string>
    <string name="reflexes">Reflexes</string>
    <string name="voidr">Void Ring</string>    
    <string name="air">Air Ring</string>
    <string name="fire">Fire Ring</string>
    <string name="water">Water Ring</string>
    <string name="earth">Earth Ring</string>
    <string name="debugtest">This is a Debug String</string>
    <string name="create_char">Create Character</string>
    <string name="submit">Submit</string>
    <string name="melee">Melee</string>
    <string name="caster">Caster</string>
    <string name="char_name">Character Name</string>
    <string name="load_existing">Load Existing Character</string>
    <string name="CreateNew">Create New Character</string>
    <string name="hello">Hello World, HomeActivity!</string>
    <string name="app_name">L5RHelper</string>
	<string name="error_no_name">Name Cannot Be Blank</string>
</resources>
