<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
<TextView android:layout_width="wrap_content" android:layout_below="@+id/TextView09" android:layout_height="wrap_content" android:id="@+id/character_name_label" android:text="@string/character_name"></TextView><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/return_main" android:text="@string/return_main" android:layout_below="@+id/character_name_label"></Button><Button android:layout_below="@+id/return_main" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/manage_character" android:text="@string/manage_char"></Button><Button android:layout_height="wrap_content" android:layout_below="@+id/manage_character" android:layout_width="wrap_content" android:id="@+id/manage_templates" android:text="@string/manage_templates"></Button><Button android:layout_below="@+id/return_main" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/go_calculate" android:text="@string/roll_calc" android:layout_toRightOf="@+id/manage_character"></Button><Button android:layout_height="wrap_content" android:layout_toRightOf="@+id/return_main" android:text="@string/delete_char" android:id="@+id/delete_char" android:layout_width="wrap_content" android:layout_below="@+id/character_name_label"></Button>











<TextView android:layout_width="wrap_content" android:layout_below="@+id/TextView10" android:layout_height="wrap_content" android:layout_marginLeft="15px" android:layout_toRightOf="@+id/character_name_label" android:text="@string/debugtest" android:id="@+id/character_name"></TextView>






</RelativeLayout>
