<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/roll_label" android:text="@string/roll" android:layout_marginTop="12px" android:layout_marginLeft="3px"></TextView>
<TextView android:layout_height="wrap_content" android:layout_toRightOf="@+id/roll_label" android:layout_width="wrap_content" android:layout_marginLeft="10px" android:id="@+id/roll_text" android:text="tempstring" android:layout_marginTop="12px"></TextView>
<EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/confidence_box" android:text="@string/default_confidence" android:layout_alignParentRight="true" android:layout_marginRight="10px" android:width="45px" android:maxLines="1" android:scrollHorizontally="true" android:scrollbarStyle="outsideOverlay"></EditText>
<CheckBox android:layout_below="@+id/confidence_box" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/use_luck" android:text="@string/use_luck" android:layout_toLeftOf="@+id/calculate" android:layout_marginRight="9px"></CheckBox><EditText android:layout_toLeftOf="@+id/use_luck" android:layout_below="@+id/confidence_box" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/zero" android:id="@+id/misc_mods" android:width="45px" android:layout_marginRight="3px" android:maxLines="1" android:scrollHorizontally="true" android:scrollbarStyle="outsideOverlay"></EditText><TextView android:layout_toLeftOf="@+id/misc_mods" android:layout_below="@+id/confidence_box" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/misc_mods" android:id="@+id/misc_mods_label" android:layout_marginTop="12px" android:layout_marginRight="3px"></TextView><Button android:layout_below="@+id/confidence_box" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentRight="true" android:text="@string/calculate" android:layout_marginRight="3px" android:id="@+id/calculate"></Button><TextView android:layout_toLeftOf="@+id/confidence_box" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/confidence_label" android:text="@string/confidence" android:layout_marginTop="12px" android:layout_marginRight="3px"></TextView>






</RelativeLayout>
