<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/roll_label" android:text="@string/roll" android:layout_marginTop="12px"></TextView>
<TextView android:layout_height="wrap_content" android:layout_toRightOf="@+id/roll_label" android:layout_width="wrap_content" android:layout_marginLeft="10px" android:id="@+id/roll_text" android:text="tempstring" android:layout_marginTop="12px"></TextView>
<EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/confidence_box" android:text="@string/default_confidence" android:layout_alignParentRight="true" android:layout_marginRight="10px"></EditText>
<TextView android:layout_toLeftOf="@+id/confidence_box" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/confidence_label" android:text="@string/confidence" android:layout_marginTop="12px" android:layout_marginRight="3px"></TextView>
</RelativeLayout>
